--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -145,7 +145,7 @@ workflows:
           filters:
             branches:
                only:
-                  - /release\/*/ # or regexes
+                  - /release\/*/
           context: MATHTONE_DEV
           name: Repack Project Refs
           requires:
