--- a/src/Mathtone.Sdk.Tests/Mathtone.Sdk.Tests.csproj
+++ b/src/Mathtone.Sdk.Tests/Mathtone.Sdk.Tests.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SDK\Mathtone.Sdk\Mathtone.Sdk.csproj" />
+  </ItemGroup>
+
 </Project>
