--- a/src/tests/Mathtone.Sdk.Tests/Mathtone.Sdk.Tests.csproj
+++ b/src/tests/Mathtone.Sdk.Tests/Mathtone.Sdk.Tests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SDK\Mathtone.Sdk\Mathtone.Sdk.csproj" />
+    <ProjectReference Include="..\..\SDK\Mathtone.Sdk\Mathtone.Sdk.csproj" />
   </ItemGroup>
 
 </Project>
