--- a/src/tests/Mathtone.Sdk.Data.Npgsql.Tests/Mathtone.Sdk.Data.Npgsql.Tests.csproj
+++ b/src/tests/Mathtone.Sdk.Data.Npgsql.Tests/Mathtone.Sdk.Data.Npgsql.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -22,7 +22,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\SDK\Mathtone.Sdk.Data.Npgsql\Mathtone.Sdk.Data.Npgsql.csproj" />
     <ProjectReference Include="..\Mathtone.Sdk.Data.Tests\Mathtone.Sdk.Data.Tests.csproj" />
   </ItemGroup>
 
