--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,10 +57,10 @@ jobs:
       - image: postgres
         environment:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: test1234
+          POSTGRES_PASSWORD: ${PGSQL_TEST_PWD}
       - image: mcr.microsoft.com/mssql/server:2022-latest
         environment:
-          MSSQL_SA_PASSWORD: test!1234
+          MSSQL_SA_PASSWORD: ${SQL_TEST_PWD}
           ACCEPT_EULA: Y
     steps:
       - checkout
@@ -71,10 +71,10 @@ jobs:
       - image: postgres
         environment:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: test1234
+          POSTGRES_PASSWORD: ${PGSQL_TEST_PWD}
       - image: mcr.microsoft.com/mssql/server:2022-latest
         environment:
-          MSSQL_SA_PASSWORD: test!1234
+          MSSQL_SA_PASSWORD: ${SQL_TEST_PWD}
           ACCEPT_EULA: Y
     working_directory: /mnt/ramdisk
     steps:
