Adding loging, etc.

--- a/src/tests/Mathtone.Sdk.Data.Tests/Mathtone.Sdk.Data.Tests.csproj
+++ b/src/tests/Mathtone.Sdk.Data.Tests/Mathtone.Sdk.Data.Tests.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\sdk\Mathtone.Sdk.Data\Mathtone.Sdk.Data.csproj" />
+  </ItemGroup>
+
 </Project>
