--- a/src/sdk/Mathtone.Sdk.Logging/Mathtone.Sdk.Logging.csproj
+++ b/src/sdk/Mathtone.Sdk.Logging/Mathtone.Sdk.Logging.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.2" />
   </ItemGroup>
 
 </Project>
