Adding SQL specific data libs.

--- a/src/sdk/Mathtone.Sdk.Data.Sql.Tests/Mathtone.Sdk.Data.Sql.Tests.csproj
+++ b/src/sdk/Mathtone.Sdk.Data.Sql.Tests/Mathtone.Sdk.Data.Sql.Tests.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\tests\Mathtone.Sdk.Data.Tests\Mathtone.Sdk.Data.Tests.csproj" />
+    <ProjectReference Include="..\Mathtone.Sdk.Data.Sql\Mathtone.Sdk.Data.Sql.csproj" />
     <ProjectReference Include="..\Mathtone.Sdk.Testing.Xunit\Mathtone.Sdk.Testing.Xunit.csproj" />
   </ItemGroup>
 
