--- a/src/tests/Sandbox/_Sandbox.csproj
+++ b/src/tests/Sandbox/_Sandbox.csproj
@@ -23,6 +23,7 @@
 	  <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
 	  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.2" />
 	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+	  <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
 	  <PackageReference Include="xunit" Version="2.4.1" />
 	  <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
 		 <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -35,6 +36,8 @@
    </ItemGroup>
 
    <ItemGroup>
+     <ProjectReference Include="..\..\sdk\Mathtone.Sdk.Data.Sql\Mathtone.Sdk.Data.Sql.csproj" />
+     <ProjectReference Include="..\..\sdk\Mathtone.Sdk.Data\Mathtone.Sdk.Data.csproj" />
      <ProjectReference Include="..\..\sdk\Mathtone.Sdk.Logging\Mathtone.Sdk.Logging.csproj" />
    </ItemGroup>
 
