--- a/src/sdk/Mathtone.Sdk.Data.Sql.Tests/Mathtone.Sdk.Data.Sql.Tests.csproj
+++ b/src/sdk/Mathtone.Sdk.Data.Sql.Tests/Mathtone.Sdk.Data.Sql.Tests.csproj
@@ -9,6 +9,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Queries\InputParam.sql" />
+    <None Remove="Queries\TemplateQuery.sql" />
+    <None Remove="Queries\TestQuery.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Queries\TemplateQuery.sql" />
+    <EmbeddedResource Include="Queries\InputParam.sql" />
+    <EmbeddedResource Include="Queries\TestQuery.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="system.linq.async" Version="6.0.1" />
