--- a/src/tests/Mathtone.Sdk.Data.Npgsql.Tests/Mathtone.Sdk.Data.Npgsql.Tests.csproj
+++ b/src/tests/Mathtone.Sdk.Data.Npgsql.Tests/Mathtone.Sdk.Data.Npgsql.Tests.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\sdk\Mathtone.Sdk.Utilities\Mathtone.Sdk.Utilities.csproj" />
     <ProjectReference Include="..\Mathtone.Sdk.Data.Tests\Mathtone.Sdk.Data.Tests.csproj" />
   </ItemGroup>
 
