--- a/src/sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
+++ b/src/sdk/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Mathtone.Sdk.Common\Mathtone.Sdk.Common.csproj" />
+    <ProjectReference Include="..\Mathtone.Sdk.Logging\Mathtone.Sdk.Logging.csproj" />
     <ProjectReference Include="..\Mathtone.Sdk.Utilities\Mathtone.Sdk.Utilities.csproj" />
   </ItemGroup>
 
