--- a/src/tests/Sandbox/_Sandbox.csproj
+++ b/src/tests/Sandbox/_Sandbox.csproj
@@ -22,6 +22,7 @@
 	  <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
 	  <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
 	  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.2" />
+	  <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
 	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
 	  <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
 	  <PackageReference Include="xunit" Version="2.4.1" />
@@ -36,9 +37,7 @@
    </ItemGroup>
 
    <ItemGroup>
-     <ProjectReference Include="..\..\sdk\Mathtone.Sdk.Data.Sql\Mathtone.Sdk.Data.Sql.csproj" />
-     <ProjectReference Include="..\..\sdk\Mathtone.Sdk.Data\Mathtone.Sdk.Data.csproj" />
-     <ProjectReference Include="..\..\sdk\Mathtone.Sdk.Logging\Mathtone.Sdk.Logging.csproj" />
+     <ProjectReference Include="..\..\sdk\Mathtone.Sdk.Testing.Xunit\Mathtone.Sdk.Testing.Xunit.csproj" />
    </ItemGroup>
 
 </Project>
