--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,9 +81,13 @@ jobs:
       - checkout
       - run: dotnet restore src/mathtone-magic.sln
       - pack-proj:
-          proj: src/SDK/Mathtone.Sdk.Data/Mathtone.Sdk.Data.csproj
+          proj: src/SDK/Mathtone.Sdk.Common/Mathtone.Sdk.Common.csproj
       - pack-proj:
-          proj: src/SDK/Mathtone.Sdk/Mathtone.Sdk.csproj
+          proj: src/SDK/Mathtone.Sdk.Logging/Mathtone.Sdk.Logging.csproj
+      - pack-proj:
+          proj: src/SDK/Mathtone.Sdk.Utilities/Mathtone.Sdk.Utilities.csproj
+      - pack-proj:
+          proj: src/SDK/Mathtone.Sdk.Data/Mathtone.Sdk.Data.csproj
       - run: 
           name: Add Nuget
           command: dotnet nuget add source ~/packages --name Local
@@ -96,21 +100,47 @@ jobs:
           proj: src/SDK/Mathtone.Sdk.Data.Npgsql/Mathtone.Sdk.Data.Npgsql.csproj
           ref: ../Mathtone.Sdk.Data/Mathtone.Sdk.Data.csproj
           pkg: Mathtone.Sdk.Data
-
+      # swap Testing
+       - swapref:
+          proj: src/SDK/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
+          ref: ../Mathtone.Sdk.Common/Mathtone.Sdk.Common.csproj
+          pkg: Mathtone.Sdk.Common
+       - swapref:
+          proj: src/SDK/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
+          ref: ../Mathtone.Sdk.Logging/Mathtone.Sdk.Logging.csproj
+          pkg: Mathtone.Sdk.Logging
+       - swapref:
+          proj: src/SDK/Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
+          ref: ../Mathtone.Sdk.Utilities/Mathtone.Sdk.Utilities.csproj
+          pkg: Mathtone.Sdk.Utilities
       #swap test projects
+     
+      - swapref:
+          proj: src/tests/Mathtone.Sdk.Testing.Xunit.Tests/Mathtone.Sdk.Testing.Xunit.Tests.csproj
+          ref: ../Mathtone.Sdk.Testing.Xunit/Mathtone.Sdk.Testing.Xunit.csproj
+          pkg: Mathtone.Sdk.Testing.Xunit
       - swapref:
           proj: src/tests/Mathtone.Sdk.Data.Sql.Tests/Mathtone.Sdk.Data.Sql.Tests.csproj
           ref: ../Mathtone.Sdk.Data.Sql/Mathtone.Sdk.Data.Sql.csproj
           pkg: Mathtone.Sdk.Data.Sql
       - swapref:
+          proj: src/tests/Mathtone.Sdk.Data.Sql.Tests/Mathtone.Sdk.Data.Sql.Tests.csproj
+          ref: ../Mathtone.Sdk.Data.Sql/Mathtone.Sdk.Data.Sql.csproj
+          pkg: Mathtone.Sdk.Testing.Xunit
+
+      - swapref:
           proj: src/tests/Mathtone.Sdk.Data.Npgsql.Tests/Mathtone.Sdk.Data.Npgsql.Tests.csproj
           ref: ../Mathtone.Sdk.Data.Npgsql/Mathtone.Sdk.Data.Npgsql.csproj
           pkg: Mathtone.Sdk.Data.Npgsql
-
       - swapref:
-          proj: src/tests/Mathtone.Sdk.Tests/Mathtone.Sdk.Tests.csproj
-          ref: ../Mathtone.Sdk/Mathtone.Sdk.csproj
-          pkg: Mathtone.Sdk
+          proj: src/tests/Mathtone.Sdk.Data.Npgsql.Tests/Mathtone.Sdk.Data.Npgsql.Tests.csproj
+          ref: ../Mathtone.Sdk.Data.Sql/Mathtone.Sdk.Data.Sql.csproj
+          pkg: Mathtone.Sdk.Testing.Xunit
+
+      #- swapref:
+      #    proj: src/tests/Mathtone.Sdk.Tests/Mathtone.Sdk.Tests.csproj
+      #    ref: ../Mathtone.Sdk/Mathtone.Sdk.csproj
+      #    pkg: Mathtone.Sdk
       - run: dotnet restore src/mathtone-magic.sln
       # - 
       - run:
