--- a/src/sdk/Mathtone.Sdk.Data.Sql.Tests/Mathtone.Sdk.Data.Sql.Tests.csproj
+++ b/src/sdk/Mathtone.Sdk.Data.Sql.Tests/Mathtone.Sdk.Data.Sql.Tests.csproj
@@ -35,6 +35,7 @@
     <ProjectReference Include="..\..\tests\Mathtone.Sdk.Data.Tests\Mathtone.Sdk.Data.Tests.csproj" />
     <ProjectReference Include="..\Mathtone.Sdk.Data.Sql\Mathtone.Sdk.Data.Sql.csproj" />
     <ProjectReference Include="..\Mathtone.Sdk.Testing.Xunit\Mathtone.Sdk.Testing.Xunit.csproj" />
+    <ProjectReference Include="..\Mathtone.Sdk.Utilities\Mathtone.Sdk.Utilities.csproj" />
   </ItemGroup>
 
 </Project>
